<resources>

    <!--Default object names/identifiers-->
    <string name="app_name">ARK Universal Access</string>
    <string name="splash_progress_desc">Loading…</string>
    <string name="splash_title">Welcome!</string>
    <string name="splash_copyright">© 2016–2018 ARK Software IRC</string>
    <string name="splash_version">Build 1040</string>

    <!--Internal Strings (Java class use)-->

    <!--MAIN ACTIVITY-->
    <string name="main_sidebar_menu_button_toast">Show Main Menu</string>
    <string name="main_sidebar_settings_button_toast">Go to Settings</string>
    <string name="main_sidebar_help_button_toast">Display Help Menu</string>
    <string name="main_sidebar_minimize_button_toast">Minimize Sidebar</string>
    <string name="main_sidebar_maximize_button_toast">Show Sidebar</string>

    <!--SETTINGS MENU-->
    <string name="settings_title_bar_back_button_toast">Back to Menu</string>
    <string name="settings_title_bar_save_button_toast">Apply Settings Changes</string>
    <string name="settings_title_bar_reset_button_toast">Reset to Defaults</string>
    <string name="settings_reset_notice_toast">Settings have been reset to defaults!</string>
    <string name="settings_apply_notice_toast">Settings changes have been applied</string>
    <string name="settings_reset_notice_query">Reset settings to defaults?</string>
    <string name="settings_cancel_notice_query">Save changes?</string>
    <string name="settings_cancel_no_changes_notice_toast">No changes detected!</string>
    <string name="settings_menu_toolbar_resize_button_text">Menu Toolbar Size</string>
    <string name="settings_default_reset_confirmation_text">Reset this setting to default?</string>
    <string name="settings_default_reset_confirmation_confirmed">Setting reset to default</string>
    <string name="settings_default_reset_confirmation_yes">Yes</string>
    <string name="settings_default_reset_confirmation_no">No</string>
    <string name="settings_cancel_query_yes">Yes</string>
    <string name="settings_cancel_query_no">No</string>

    <!--DIALOGS-->

    <string name="file_select_dialog_no_files_notice">NO ITEMS FOUND</string>
    <string name="multi_select_dialog_no_items_notice">NO ITEMS FOUND</string>

    <!--Object subvalues/variant values-->
    <string name="default_button_desc">Button</string>
    <string name="default_settings_button_unset">Not Set!</string>
    <string name="default_settings_button_set">Set!</string>
    <string name="default_boolean_button_true">Yes</string>
    <string name="default_boolean_button_false">No</string>
    <string name="default_settings_fileSelect_button_request">Select a file.</string>
    <string name="default_YNDialog_message">Confirm selected action:</string>
    <string name="default_YNDialog_yes_text">Confirm</string>
    <string name="default_YNDialog_no_text">Cancel</string>
    <string name="default_help_overlay_label_text">This is an element.</string>
    <string name="default_FileDialog_title">Choose a file</string>
    <string name="default_FileDialog_up_button_text">Prev. Folder</string>
    <string name="default_MultiSelectDialog_title">Select an option:</string>

    <!--Content Descriptors-->
    <string name="contentDesc_main_sidebar_menu_button">Sidebar Menu Button</string>
    <string name="contentDesc_main_sidebar_settings_button">Sidebar Settings Button</string>
    <string name="contentDesc_main_sidebar_help_button">Sidebar Help Button</string>
    <string name="contentDesc_splash_logo">Company Logo</string>
    <string name="contentDesc_main_sidebar_minimize_button">Sidebar Mimimize Button</string>
    <string name="contentDesc_settings_title_bar_back_button">Back to Main Menu</string>
    <string name="contentDesc_settings_title_bar_reset_button">Reset to Defaults</string>
    <string name="contentDesc_settings_title_bar_apply_button">Apply Settings</string>

</resources>
