<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settingsBackgroundSemiTR"
    tools:context="com.michaelRunzler.ARK.android.activity.SettingsMenuActivity">

    <RelativeLayout
        android:id="@+id/settings_title_bar_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/settings_title_bar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/contentDesc_settings_title_bar_back_button"
            android:onClick="settingsBack"
            android:src="@drawable/ic_arrow_back_48dp" />

        <ImageButton
            android:id="@+id/settings_title_bar_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/contentDesc_settings_title_bar_reset_button"
            android:onClick="settingsReset"
            android:src="@drawable/ic_reset_48dp" />

        <ImageButton
            android:id="@+id/settings_title_bar_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/contentDesc_settings_title_bar_apply_button"
            android:onClick="settingsApply"
            android:src="@drawable/ic_check_48dp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/settings_scroll_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarDefaultDelayBeforeFade="1000"
        android:scrollbarFadeDuration="400"
        android:scrollbarSize="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title_bar_container"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:id="@+id/settings_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Replace with custom settings buttons at your discretion-->

            <include
                android:id="@+id/settings_test_button_1"
                layout="@layout/hybrid_settings_button"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_margin="4dp"/>

            <include
                android:id="@+id/settings_test_button_2"
                layout="@layout/hybrid_settings_button"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp" />

            <include
                android:id="@+id/settings_test_button_3"
                layout="@layout/hybrid_settings_button"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="4dp" />

            <include
                android:id="@+id/settings_test_button_4"
                layout="@layout/hybrid_settings_button"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/settings_test_button_1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

            <include
                android:id="@+id/settings_test_button_5"
                layout="@layout/hybrid_settings_button"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_below="@+id/settings_test_button_1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

            <include
                android:id="@+id/settings_test_button_6"
                layout="@layout/hybrid_settings_button"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/settings_test_button_1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
